--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -293,7 +293,7 @@
   margin-bottom: 1em;
   padding-bottom: 0.5em;
   border-bottom: 2px solid var(--color-border);
-  scroll-margin-top: calc(var(--header-height) + 1rem);
+  scroll-margin-top: calc(var(--header-height) + var(--subnav-height) + 1rem);
 }
 
 .post-content h2 {
@@ -301,7 +301,7 @@
   font-weight: 600;
   margin-top: 2em;
   margin-bottom: 0.875em;
-  scroll-margin-top: calc(var(--header-height) + 1rem);
+  scroll-margin-top: calc(var(--header-height) + var(--subnav-height) + 1rem);
 }
 
 .post-content h3 {
@@ -309,7 +309,7 @@
   font-weight: 600;
   margin-top: 1.75em;
   margin-bottom: 0.75em;
-  scroll-margin-top: calc(var(--header-height) + 1rem);
+  scroll-margin-top: calc(var(--header-height) + var(--subnav-height) + 1rem);
 }
 
 .post-content h4,
